2007-09-29  Michael Hutchinson <mhutchinson@novell.com>

	* sources/makefile, sources/gtksourceview2-sharp-sources.xml, 
	  configure.in, gtksourceview/gtksourceview2-api.raw,
	  gtksourceview2-sharp-sources.xml: Update version and API to 
	  GtkSourceView 2.0.0.

2007-09-11  Michael Hutchinson <mhutchinson@novell.com>

	* sources/makefile,
	  sources/gtksourceview2-sharp-sources.xml,
	  gtksourceview/gtksourceview2-api.raw,
	  configure.in: Updated GtkSourceView version to 1.90.5.
	  
	* gtksourceview/SourceBuffer.custom,
	  gtksourceview/Gtk.metadata: Updated to 1.90.5 API changes.

	* sample/Makefile.am: Copy the lib into this directory for 
	  convenience.

2007-08-28  Michael Hutchinson <m.j.hutchinson@gmail.com>

	* sources/makefile,
	  sources/gtksourceview2-sharp-sources.xml,
	  gtksourceview/gtksourceview2-api.raw,
	  configure.in: Updated GtkSourceView version to 1.90.4.
	  
	* sample/SourceViewTest.cs,
	  gtksourceview/Gtk.metadata: Updated to 1.90.4 API.
	  
	* gtksourceview/Makefile.am: Updated.
	
	* gtksourceview/SourceStyleScheme.custom,
	  gtksourceview/SourceLanguagesManager.custom,
	  gtksourceview/SourceLanguageManager.custom,
	  gtksourceview/SourceTagTable.custom,
	  gtksourceview/Global.custom: Removed, not used in 1.90.4.

2007-08-28  Michael Hutchinson <m.j.hutchinson@gmail.com>

	* gtksourceview/gtksourceview2-api.raw,
	  gtksourceview/Makefile.am: Some more renaming.

2007-08-21  Michael Hutchinson <m.j.hutchinson@gmail.com>

	* sample/SourceViewTest.cs: Add an option to specify the source 
	  language.

2007-08-20  Michael Mutchinson <m.j.hutchinson@gmail.com>

	* configure.in: Re-version library to 1.90.3 to match unmanaged 
	  library, as we are now tracking the 2.x beta series.
	  
	* gtksourceview/SourceStyleScheme.custom,  
	  gtksourceview/gtksourceview-api.raw,
	  gtksourceview/SourceBuffer.custom,
	  gtksourceview/Gtk.metadata,
	  gtksourceview/GtkSourceView.cs,
	  gtksourceview/SourceLanguageManager.custom,